Re-format /man/man9 rtapi_ for readability and remove troff
Several corrections to obvious errors, but probably wrong elsewhere too

Thats it, I am finished with manual pages!

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/man/man3/rtapi_app_exit.asciidoc
+++ b/docs/man/man3/rtapi_app_exit.asciidoc
@@ -10,12 +10,12 @@
 
 == NAME
 
-rtapi_app_exit -- User-provided function to shut down a component
+**rtapi_app_exit** -- User-provided function to shut down a component
 
 
 
 == SYNTAX
-void **rtapi_app_exit**(void) { __...__ }
+**void rtapi_app_exit**( **void** ) { __...__ }
 
 
 == ARGUMENTS
@@ -29,7 +29,8 @@ generally consists of a call to rtapi_exit or hal_exit, preceded by other
 component-specific shutdown code.
 
 This code is called when unloading a component which successfully initialized
-(i.e., returned zero from its **rtapi_app_main**).  It is not called when
+(i.e., returned zero from its **rtapi_app_main**).  +
+It is not called when
 the component did not successfully initialize.
 
 
@@ -46,6 +47,6 @@ realtime) context.
 
 
 == SEE ALSO
-**rtapi_app_main**,
-**rtapi_exit**,
+**rtapi_app_main** +
+**rtapi_exit** +
 **hal_exit**
