--- a/docs/man/man3/rtapi_exit.asciidoc
+++ b/docs/man/man3/rtapi_exit.asciidoc
@@ -10,23 +10,26 @@
 
 == NAME
 
-rtapi_exit -- Shut down RTAPI
+**rtapi_exit** -- Shut down RTAPI
 
 
 
 == SYNTAX
- int rtapi_exit(int __module_id__)
+__#include "rtapi.h"__
+
+**int rtapi_exit** ( **int** __module_id__ )
 
 
 
 == ARGUMENTS
-.IP __module_id__
+__module_id__ +
 An rtapi module identifier returned by an earlier call to **rtapi_init**.
 
 
 
 == DESCRIPTION
-**rtapi_exit** shuts down and cleans up the RTAPI.  It must be
+**rtapi_exit** shuts down and cleans up the RTAPI.  +
+It must be
 called prior to exit by any module that called **rtapi_init**.
 
 
