--- a/docs/man/man3/rtapi_outb.asciidoc
+++ b/docs/man/man3/rtapi_outb.asciidoc
@@ -10,27 +10,30 @@
 
 == NAME
 
-rtapi_outb, rtapi_inb -- Perform hardware I/O
+**rtapi_outb**, **rtapi_inb** -- Perform hardware I/O
 
 
 
 == SYNTAX
-void rtapi_outb(unsigned char __byte__, unsigned int __port__)
-unsigned char rtapi_inb(unsigned int __port__)
+**void rtapi_outb** ( **unsigned char** __byte__, **unsigned int** __port__ )
+
+**unsigned char rtapi_inb** ( **unsigned int** __port__ )
 
 
 
 == ARGUMENTS
-.IP __port__
+__port__ +
 The address of the I/O port
-.IP __byte__
+
+__byte__ +
 The byte to be written to the port
 
 
 
 == DESCRIPTION
-**rtapi_outb** writes a byte to a hardware I/O port.  **rtapi_inb**
-reads a byte from a hardware I/O port.
+**rtapi_outb** writes a byte to a hardware I/O port.  
+
+**rtapi_inb** reads a byte from a hardware I/O port.
 
 
 
@@ -47,7 +50,8 @@ Not available in userspace components.
 
 == NOTES
 The I/O address should be within a region previously allocated by
-**rtapi_request_region**.  Otherwise, another real-time module or the Linux
+**rtapi_request_region**.  +
+Otherwise, another real-time module or the Linux
 kernel might attempt to access the I/O region at the same time.
 
 
