--- a/docs/man/man3/rtapi_task_new.asciidoc
+++ b/docs/man/man3/rtapi_task_new.asciidoc
@@ -10,40 +10,47 @@
 
 == NAME
 
-rtapi_task_new -- create a realtime task
+**rtapi_task_new** -- create a realtime task
 
 
 
 == SYNTAX
-int rtapi_task_new(void (*__taskcode__)(void*), void *__arg__,
-	int __prio__, unsigned long __stacksize__, int
-	__uses_fp__, char **__name__, int __cpu_id__)
-int rtapi_task_delete(int __task_id__)
+**int rtapi_task_new** (**void**  (* __taskcode__)(**void** * ), **void** * __arg__, **int** __prio__, **unsigned long** __stacksize__, **int** __uses_fp__, **char** **__name__, **int** __cpu_id__ )
+
+**int rtapi_task_delete** ( **int**  __task_id__ )
 
 
 == ARGUMENTS
-.IP __taskcode__
+__taskcode__ +
 A pointer to the function to be called when the task is started
-.IP __arg__
-An argument to be passed to the __taskcode__ function when the task is
-started
-.IP __prio__
+
+__arg__ +
+An argument to be passed to the __taskcode__ function when the task is started
+
+__prio__ +
 A task priority value returned by **rtapi_prio_xxxx**
-.IP __uses_fp__
+
+__uses_fp__ +
 A flag that tells the OS whether the task uses floating point or not.
-.IP __task_id__
+
+__task_id__ +
 A task ID returned by a previous call to **rtapi_task_new**
-.IP __name__
+
+__name__ +
 The name argument is used to identify the thread by name at the
-operating system level. Corresponds to the HAL name of the thread.
-.IP __cpu_id__
+operating system level. +
+Corresponds to the HAL name of the thread.
+
+__cpu_id__ +
 Bind this thread to a particular CPU core.
 
 
 
 == DESCRIPTION
-**rtapi_task_new** creates but does not start a realtime task.  The task is
-created in the "paused" state.  To start it, call either **rtapi_task_start**
+**rtapi_task_new** creates but does not start a realtime task.  +
+The task is
+created in the "paused" state.  +
+To start it, call either **rtapi_task_start**
 for periodic tasks, or **rtapi_task_resume** for free-running tasks.
 
 
@@ -54,12 +61,16 @@ Call only from within init/cleanup code, not from realtime tasks.
 
 
 == RETURN VALUE
-On success, returns a positive integer task ID.  This ID is used
-for all subsequent calls that need to act on the task.  On failure,
+On success, returns a positive integer task ID.  +
+This ID is used
+for all subsequent calls that need to act on the task.  +
+On failure,
 returns an RTAPI status code.
 
 
 
 == SEE ALSO
-**rtapi_prio**, **rtapi_task_start**, **rtapi_task_wait**, **rtapi_task_resume
-**
+**rtapi_prio** +
+**rtapi_task_start** +
+**rtapi_task_wait** +
+**rtapi_task_resume**
