Remove references to installing separate machinekit-dev package.
This was deprecated in PR #1230

Signed-off-by: Mick <arceye@mgware.co.uk>

--- a/docs/code/Contributing-to-Machinekit.asciidoc
+++ b/docs/code/Contributing-to-Machinekit.asciidoc
@@ -169,7 +169,7 @@ There's an automatic way to check a branch for each commit being buildable
 Use as follows (in this case testing every commit from origin/master to
 HEAD, including running regression tests):
 
-`cd machinekit-dev`
+`cd machinekit`
 
 `git-test-sequence origin/master..  '(cd src;make;runtests)'`
 
